tests/paczka1/fuzzy1/56733199.err
Error in line 17: enCtQKjr S726 71,1
Error in line 21: FjMu A513 30,8
Error in line 32: S770 S726 14,1
